fixed issue where legend color picker was behind modal and causing overflow issues

--- a/reactapp/components/modals/wideModal.css
+++ b/reactapp/components/modals/wideModal.css
@@ -50,3 +50,7 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.mapLayerContent {
+  height: 85vh;
+}
